# Ecommerce-Invoice-End-to-end

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  airflow.Dockerfile  airflow.properties  cleaning-notebook.ipynb  docker-compose.yml  ecomm_bi.pbix  ecomm_eda.ipynb  getting_started.sh  model_dev.ipynb  postgres-target.Dockerfile  postgres.Dockerfile  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  ruff.toml  setup.sql  target.sql
.github/: pull_request_template.md
.github/workflows/: build-deploy-model-dev.yml  build-deploy-model.yml  deploy.yml  pull-request-ci.yml
ci/: requirements-ci.txt
code/deployment/: api_app.py  deployment.Dockerfile
code/ingestion/: __main__.py
code/models/: .dockerignore  Dockerfile  README.md  abstract.py  io_services.py  main.py  ml_services.py  requirements.txt
deployment/: api_app.py  deploy.yml  deployment.Dockerfile
docker/: airflow-entrypoint.sh  airflow.Dockerfile  airflow.properties  docker-compose.yml  fernet.py  postgres-source.Dockerfile  postgres-target.Dockerfile  setup.sql  target.sql
notebooks/: ecomm_eda.ipynb  model_dev.ipynb  pyspark_transformation_test.ipynb
src/config/: connections.json  variables-masked.json
src/dags/: .airflowignore  alternative_cloud_etl.py  ecomm_invoice_etl_dag.py  transform_load.py
terraform/: main.tf  variables.tf
terraform/aws/: main.tf
terraform/gcp/: main.tf  variables.tf
tests/unit/: test_ml_services.py
web-scraping/: ecommerce.ipynb  ecommerce_script.py  ecommerce_script_old.py  slider_solver.py  slider_solver_new.py
(+48 files in other folders)
