[tool.poetry]
name = "project ecommerce invoice"
version = "0.1.0"
description = ""
authors = ["Patcharanat <patcha-ranat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = "2.6.0"
kaggle = "1.5.13"
google-cloud-storage = "2.9.0"
pyarrow = "11.0.0"
pandas = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
